--- a/cypress/package.json
+++ b/cypress/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "open": "cypress open",
+    "cypress:open": "cypress open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^9.5.4"
+    "cypress": "^9.7.0",
+    "test-data-bot": "^0.8.0"
   }
 }
